# DevStart

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
src/devstart/: __init__.py  __main__.py  defaults.py
src/devstart/cli/: main.py
src/devstart/generators/: project.py
src/devstart/prompts/: interactive.py
src/devstart/templates/base/: Makefile.j2  README.md.j2  __main__.py.j2  env.j2  gitignore.j2  init.py.j2  main.py.j2  pyproject.toml.j2  test_main.py.j2  vscode_launch.json.j2  vscode_settings.json.j2
src/devstart/templates/ci/: ci.yml.j2
src/devstart/templates/devcontainer/: devcontainer.json.j2
src/devstart/templates/diagrams/: class_diagram.puml.j2
src/devstart/templates/docker/: Dockerfile.j2
src/devstart/templates/precommit/: pre-commit-config.yaml.j2
tests/: conftest.py  test_cli.py  test_generator.py  test_prompts.py
